<resources>
    <string name="app_name">InAgito</string>
    <string name="title_activity_pricipal">Map</string>
    <string name="title_activity_principal">PrincipalActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="mapa_normal">Modo Normal</string>
    <string name="mapa_satelite">Modo Satélite</string>
    <string name="mapa_terreno">Modo Terreno</string>
    <string name="mapa_hibrido">Modo Hibrido</string>
    <string name="mapa_location_direction">Direções</string>
    <string name="mapa_zoom_in">Almentar Zoom</string>
    <string name="mapa_zoom_out">Diminuir Zoom</string>
</resources>
